removing archive of .frm-s added (BUG#4821)

mysql-test/r/view.result:
  Removing database with .frm archives
mysql-test/t/view.test:
  Removing database with .frm archives
sql/parse_file.cc:
  fixed revision number printing
sql/sql_db.cc:
  removing archive of .frm-s added